--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,77 +1,96 @@
-.add-user {
-    color: #000;
-    overflow-x: hidden;
-    height: 100%;
-    // background-image: url("https://png.pngtree.com/thumb_back/fw800/background/20190223/ourmid/pngtree-student-book-advertising-background-backgroundblue-backgroundwhite-borderbookstudentknow-image_75794.jpg");
-    // background-repeat: no-repeat;
-    // background-size: 100% 100%;
-    font-family: sans-serif;
-}
+// .add-user {
+//     color: #000;
+//     overflow-x: hidden;
+//     height: 100%;
+//     // background-image: url("https://png.pngtree.com/thumb_back/fw800/background/20190223/ourmid/pngtree-student-book-advertising-background-backgroundblue-backgroundwhite-borderbookstudentknow-image_75794.jpg");
+//     // background-repeat: no-repeat;
+//     // background-size: 100% 100%;
+//     font-family: sans-serif;
+// }
 
-.add-user .form-head {
-    font-family: monospace;
-    font-size: xx-large;
-    font-weight: bolder;
-    color: rgb(48, 164, 168);
-    text-shadow: 2px 0 0 rgb(0, 0, 0), -2px 0 0 black, 0 2px 0 black, 0 -2px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
-}
+// .add-user .form-head {
+//     font-family: monospace;
+//     font-size: xx-large;
+//     font-weight: bolder;
+//     color: rgb(48, 164, 168);
+//     text-shadow: 2px 0 0 rgb(0, 0, 0), -2px 0 0 black, 0 2px 0 black, 0 -2px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
+// }
 
-.add-user .card {
-    padding: 60px 40px;
+// .add-user .card {
+//     padding: 60px 40px;
+//     margin-top: 60px;
+//     margin-bottom: 60px;
+//     border: none !important;
+//     opacity: 85%;
+//     box-shadow: 0 6px 12px 0 rgba(172, 41, 41, 0.2)
+// }
+
+// .add-user .blue-text {
+//     color: #00BCD4
+// }
+
+// .add-user .form-control-label {
+//     margin-bottom: 0;
+//     margin-top: 1rem;
+//     font-size: x-large;
+//     font-weight: bold;
+// }
+
+// .add-user input,
+// textarea, .form-select,
+// button {
+//     padding: 8px 15px;
+//     border-radius: 5px !important;
+//     margin: 5px 0px;
+//     box-sizing: border-box;
+//     border: 1px solid #ccc;
+//     font-size: 18px !important;
+//     font-weight: 300
+// }
+
+// .add-user input:focus, .form-select:focus {
+//     -moz-box-shadow: none !important;
+//     -webkit-box-shadow: none !important;
+//     box-shadow: none !important;
+//     border: 1px solid #00BCD4;
+//     outline-width: 0;
+//     font-weight: 400
+// }
+
+// .add-user .btn-block {
+//     text-transform: uppercase;
+//     font-size: 15px !important;
+//     font-weight: 400;
+//     height: 43px;
+//     cursor: pointer
+// }
+
+// .add-user .btn-block:hover {
+//     color: black !important
+// }
+
+// .add-user button:focus {
+//     -moz-box-shadow: none !important;
+//     -webkit-box-shadow: none !important;
+//     box-shadow: none !important;
+//     outline-width: 0
+// }
+
+.container{
+  
+    padding: 30px 40px;
     margin-top: 60px;
     margin-bottom: 60px;
     border: none !important;
     opacity: 85%;
-    box-shadow: 0 6px 12px 0 rgba(172, 41, 41, 0.2)
+    box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.2)
+
 }
 
-.add-user .blue-text {
-    color: #00BCD4
-}
-
-.add-user .form-control-label {
-    margin-bottom: 0;
-    margin-top: 1rem;
-    font-size: x-large;
-    font-weight: bold;
-}
-
-.add-user input,
-textarea, .form-select,
-button {
-    padding: 8px 15px;
-    border-radius: 5px !important;
-    margin: 5px 0px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    font-size: 18px !important;
-    font-weight: 300
-}
-
-.add-user input:focus, .form-select:focus {
-    -moz-box-shadow: none !important;
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important;
-    border: 1px solid #00BCD4;
-    outline-width: 0;
-    font-weight: 400
-}
-
-.add-user .btn-block {
-    text-transform: uppercase;
-    font-size: 15px !important;
-    font-weight: 400;
-    height: 43px;
-    cursor: pointer
-}
-
-.add-user .btn-block:hover {
-    color: black !important
-}
-
-.add-user button:focus {
-    -moz-box-shadow: none !important;
-    -webkit-box-shadow: none !important;
-    box-shadow: none !important;
-    outline-width: 0
-}
+// . {
+//     margin-bottom: 0;
+//     margin-top: 1rem;
+//     font-size: x-large;
+//     font-weight: bold;
+   
+// }
