--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,70 +1,36 @@
+<div class="container">
 <form #loginForm="ngForm">
-    <div class="container-fluid px-1 py-5 mx-auto user-form">
-      <div class="row d-flex justify-content-center">
-        <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
-          <div class="card">
-            <!-- <h1 class="form-head">Log In</h1> -->
-            <form class="form-card" onsubmit="event.preventDefault()">
-              <div class="row justify-content-between text-left">
-                <div class="form-group col-sm-12 flex-column d-flex"> <label class="form-control-label px-3">User
-                    Name<span class="text-danger"> *</span></label> <input type="text" id="fname" name="fname"
-                    placeholder="Enter your user name" [(ngModel)]="username"> </div>
-              </div>
-              <div class="row justify-content-between text-left">
-                <div class="form-group col-sm-12 flex-column d-flex"> <label class="form-control-label px-3">Password
-                    <span class="text-danger"> *</span></label> <input type="password" id="password" [(ngModel)]="psw"
-                    name="password"> </div>
-              </div>
-              <div class="row justify-content-between text-left">
-                <div class="form-group col-sm-12 flex-column d-flex"> <label class="form-control-label px-3">Role<span
-                      class="text-danger"> *</span></label>
-                  <select class="form-select" id="role" name="role" pattern="user|admin"  aria-label="Default select example" [(ngModel)]="role">
-                
-                  <option value="admin">Admin</option>
-                  <option value="user">Student</option>
-                </select>
-                  <!-- <select name="role" id="role" [(ngModel)]="role">
-                    <option disabled>Select Role</option>
-                    <option value="admin">Admin</option>
-                    <option value="user">User</option>
-                  </select> -->
-                </div>
-              </div>
-              <div class="row justify-content-end">
-                <div class="form-group col-sm-12">
-                  <button type="submit" class="btn-block btn-primary" value="Login" (click)="display(loginForm)">Log In</button>
-                </div>
-                <!-- <div class="form-group col-sm-12"> <button type="submit" class="btn-block btn-primary">Log In</button> </div> -->
   
-                <!-- <input type="button" value="Login" (click)="display(loginForm)"> -->
-  
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </form>
-  <!-- <div class="row justify-content-center align-items-center"> -->
-  <!-- <div class="h1 {font-size: 8px;}"> -->
-  
-  <!-- <form #loginForm="ngForm">
-  <div class="col-md mb-3">
-    <br>
-    <label>Name</label>
-    <input type="text" [(ngModel)]="username" name="username" placeholder="UserName"><br><br>
-    
-    <label>Password</label>
-    <input type="password" [(ngModel)]="psw" name="psw"  placeholder="Password"><br><br>
-    <div><br>
-      
-      <label for="role" ><b>Role</b></label>
-        <select name="role" id="role" [(ngModel)]="role">
-                <option disabled>Select Role</option>
+            <div class="form-group">
+               <label>username</label>
+               <input type="text" #username="ngModel" class="form-control" [class.is-invalid]="username.invalid && username.touched" name="username" [(ngModel)]="name" required> 
+               <small class="text-danger" [class.d-none]="username.valid || username.untouched">username is required</small>
+            </div>
+              
+
+              
+            <div class="form-group">
+              <label>Password</label>
+                  <span class="text-danger"> *</span>
+                   <input type="password" id="password" [(ngModel)]="password" name="password" required="">      
+            </div> 
+
+            
+            <div class="form-group">
+              <label >Role </label>
+                <span class="text-danger"> *</span>
+                <select #role="ngModel" class="form-select" id="role" name="role" pattern="user|admin" [(ngModel)]="roleList">
                 <option value="admin">Admin</option>
-                <option value="user">User</option>
-      </select>
-      </div><br>
-    <input type="button" value="Login" (click)="display(loginForm)">
-  </div>
-</form>-->
+                <option value="user">Student</option>
+              </select>
+                
+            </div>
+            <div class="row justify-content-end">
+              <div class="form-group col-sm-12">
+               
+                <button [disabled]="loginForm.form.invalid"  value="Login" (click)="display(loginForm)">Login</button>
+              </div>
+            </div>
+          </form>
+       
+        </div>
