--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h2>REGISTER</h2>
   <form #userForm="ngForm">
     <div class="form-group">
     <label>Student Name</label>
@@ -57,7 +58,7 @@
               
 
 
-     <button [disabled]="userForm.form.invalid"  (click)="userdata(userForm)">Register</button>
+     <button [disabled]="userForm.form.invalid"  (click)="userdata(userForm)">Submit</button>
 
   </form>
 </div>
