--- a/src/app/update-holiday/update-holiday.component.scss
+++ b/src/app/update-holiday/update-holiday.component.scss
@@ -1,16 +1,20 @@
-select{
-    width: 100%;
-    height: 40px;
-}
+
 #submit{
     float: right;
     background-color: darkgreen;
 }
-.democlass{
-    width:250px;
-    height:100px;
-    background-color:green;
-    color:white;
-    margin-left:750px;
-    padding:20px
+
+.container{
+    padding:20px;
+    border: 3px solid rgb(0, 0, 0);
+    margin-left: 290px;
+    width:50% ;
+    color: white;
+    margin-top: 150px;
+    background-color: rgb(14, 74, 111);
+}
+
+input,label{
+    margin-top: 10px;
+    margin-left: 10px;
 }
