--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -2,7 +2,7 @@
 <form #loginForm="ngForm">
   
             <div class="form-group">
-               <label>username</label>
+               <label>Username</label>
                <input type="text" #username="ngModel" class="form-control" [class.is-invalid]="username.invalid && username.touched" name="username" [(ngModel)]="name" required> 
                <small class="text-danger" [class.d-none]="username.valid || username.untouched">username is required</small>
             </div>
@@ -11,13 +11,13 @@
               
             <div class="form-group">
               <label>Password</label>
-                  <span class="text-danger"> *</span>
-                   <input type="password" id="password" [(ngModel)]="password" name="password" required="">      
+                  <span class="text-danger">*</span><br>
+                   <input class="text-danger" type="password" id="password" [(ngModel)]="password" name="password" required="">      
             </div> 
 
             
             <div class="form-group">
-              <label >Role </label>
+              <label >Role</label>
                 <span class="text-danger"> *</span>
                 <select #role="ngModel" class="form-select" id="role" name="role" pattern="user|admin" [(ngModel)]="roleList">
                 <option value="admin">Admin</option>
