--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,25 +1,32 @@
 .container{
-  
-    padding: 30px 40px;
-    margin-top: 60px;
-    margin-bottom: 60px;
-    border: none !important;
-    opacity: 85%;
-    box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.2)
-
+    padding: 30px;
+    margin-top: 80px;
+    // margin-bottom: 80px;
+    // border: none !important;
+    background-color: #293b64;
 }
 div{
 
     margin-top:20px;
     // margin-left:50px;
+}
+input,select{
+    width: 90%;
+    height:50px;  
     
 }
-input{
-    width: 100%;
-    height:50px;
+label{
+    color: yellow;
+    font-size: large;
 }
-select{
-    width: 98%;
-    height: 50px;
-    margin-left: 15px;
+// select{
+//     width: 98%;
+//     height: 50px;
+//     // margin-left: 15px;
+// }
+button{
+    background-color: white;
+    width: 25%;
+    color: #000;
+    margin-left: 150px;
 }
