--- a/src/app/sidenavbar/sidenavbar.component.html
+++ b/src/app/sidenavbar/sidenavbar.component.html
@@ -17,6 +17,9 @@
         <a mat-list-item routerLink="/timetable" routerLinkActive="list-item-active">
             <mat-icon>view_list</mat-icon>Timetable
       </a>
+      <a mat-list-item routerLink="/reference" routerLinkActive="list-item-active">
+        <mat-icon>book</mat-icon>Reference
+  </a>
 
 </mat-nav-list>
 
