--- a/src/app/reference/reference.component.html
+++ b/src/app/reference/reference.component.html
@@ -45,4 +45,4 @@
 
 <input type="text" (change)="getName(name.value)" #name><br>
 <input type="file" (change)="getFile($event)"><br>
-<input type="button" (click)="submitData()" value="upload file">
+<!-- <input type="button" (click)="upload(file)" value="upload file"> -->
