--- a/src/app/reference/reference.component.html
+++ b/src/app/reference/reference.component.html
@@ -1,16 +1,29 @@
-<!-- <div class="container">
-    <div class="row">
-      <div class=" col">
-        <div class="notes" >
-         
-          <img src="assets/tamil-culture.jpg">
-          <div class=" text-black  p-12">Tamil</div>
-          </a>
-        </div>
+<div class="cards">
+  <div class="row">
+    <div class=" col">
+      <div class="card1" >
+        <a href="https://static.careers360.mobi/media/uploads/froala_editor/files/CBSE-Class-12-English-Syllabus.pdf">
+          <img src="assets/english.jpeg">
+          <!-- <div class=" text-black  p-12">Tamil</div> -->
+        </a>
       </div>
+  
+    <br>
 
-      <div class="notes" >
-       
+    <div class="card" style="max-width: 40rem">
+      <a href="https://static.careers360.mobi/media/uploads/froala_editor/files/CBSE-Class-12-English-Syllabus.pdf">
+        <img src="assets/tamil-culture.jpg">
+        <!-- <div class=" text-black  p-12">Tamil</div> -->
+      </a>
+    </div>
+  </div>
+</div>
+
+    
+  </div>
+
+    <!-- <div class="notes" >
+        <a href="">
         <img src="assets/english.jpeg">
         <div class="card-body text-black  p-12">English</div>
         </a>
@@ -18,13 +31,14 @@
     </div>
 
     <div class="notes" >
+      <a href="">
         <img src="assets/maths.jpeg">
         <div class="card-body text-black  p-12">Maths/div>
         
       </div>
 
     <div class="notes" >
-      
+      <a href="">
         <img src="assets/science.png">
         <div class="card-body text-black  p-12">Science</div>
         </a>
@@ -32,17 +46,12 @@
 
 
       <div class="notes" >
+       <a href="">
         <img src="assets/social.png">
         <div class="card-body text-black  p-12">Social Science</div>
         </a>
       </div>
+ -->
+    
 
 
-      
-    </div>
-     -->
-
-
-<input type="text" (change)="getName(name.value)" #name><br>
-<input type="file" (change)="getFile($event)"><br>
-<!-- <input type="button" (click)="upload(file)" value="upload file"> -->
