--- a/src/app/reference/reference.component.scss
+++ b/src/app/reference/reference.component.scss
@@ -1,5 +1,22 @@
 
 
-.notes{
-    max-width:15rem
+// .notes1{
+//    height:50px;
+// }
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    grid-gap: 20px;
+}
+
+// .card {
+//     display: grid;
+//     grid-template-rows: max-content 200px 1fr;
+// }
+
+.card {
+    object-fit: cover;
+    width: 40%;
+    height: 20px;
 }
