--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -1,8 +1,7 @@
 <div class="second">
-    <button class="Login" (click)="login()">LogIn</button>
-    <button class="Register" (click)="Register()">Register</button>
-</div>
+    <div class="container">
+        <button class="Login" (click)="login()">LogIn</button>
+        <button class="Register" (click)="Register()">Register</button>
+    </div>
+  </div>
 
-<div class="first">
-
-</div>
