--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,36 +1,34 @@
 <div class="container">
-<form #loginForm="ngForm">
-  
-            <div class="form-group">
-               <label>Username</label>
-               <input type="text" #username="ngModel" class="form-control" [class.is-invalid]="username.invalid && username.touched" name="username" [(ngModel)]="name" required> 
-               <small class="text-danger" [class.d-none]="username.valid || username.untouched">username is required</small>
-            </div>
-              
+  <form #loginForm="ngForm">
 
-              
-            <div class="form-group">
-              <label>Password</label>
-                  <span class="text-danger">*</span><br>
-                   <input class="text-danger" type="password" id="password" [(ngModel)]="password" name="password" required="">      
-            </div> 
+    <div class="form-group">
+      <label>Register Number</label>
+      <input type="text" #regNum="ngModel" class="form-control" [class.is-invalid]="regNum.invalid && regNum.touched" name="regNum" [(ngModel)]="regNumber" required>
+      <small class="text-danger" [class.d-none]="regNum.valid || regNum.untouched">Register is invalid</small>
+    </div>
 
-            
-            <div class="form-group">
-              <label >Role</label>
-                <span class="text-danger"> *</span>
-                <select #role="ngModel" class="form-select" id="role" name="role" pattern="user|admin" [(ngModel)]="roleList">
-                <option value="admin">Admin</option>
-                <option value="user">Student</option>
-              </select>
-                
-            </div>
-            <div class="row justify-content-end">
-              <div class="form-group col-sm-12">
-               
-                <button [disabled]="loginForm.form.invalid"  value="Login" (click)="display(loginForm)">Login</button>
-              </div>
-            </div>
-          </form>
-       
-        </div>
+    <div class="form-group">
+      <label>Password</label>
+      <span class="text-danger">*</span><br>
+      <input class="text-danger" type="password" id="password" [(ngModel)]="password" name="password" required="">
+    </div>
+
+    <div class="form-group">
+      <label>Role</label>
+      <span class="text-danger"> *</span>
+      <select #role="ngModel" class="form-select" id="role" name="role" pattern="user|admin" [(ngModel)]="roleList">
+        <option value="admin">Admin</option>
+        <option value="user">Student</option>
+      </select>
+
+    </div>
+    <br>
+    <!-- <div class="row justify-content-end">
+      <div class="form-group col-sm-12"> -->
+
+        <button [disabled]="loginForm.form.invalid" value="Login" (click)="display(loginForm)">Login</button>
+      <!-- </div>
+    </div> -->
+  </form>
+
+</div>
