--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,9 +1,8 @@
 .container{
     padding: 30px;
-    margin-top: 80px;
-    // margin-bottom: 80px;
-    // border: none !important;
+    margin-top: 100px;
     background-color: #293b64;
+    width:40%;
 }
 div{
 
@@ -11,12 +10,15 @@ div{
     // margin-left:50px;
 }
 input,select{
+    padding: 10px;
     width: 90%;
     height:50px;  
+    background-color: rgb(255, 255, 255);
     
 }
 label{
-    color: yellow;
+    padding: 10px;
+    color: rgb(232, 232, 232);
     font-size: large;
 }
 // select{
@@ -25,8 +27,10 @@ label{
 //     // margin-left: 15px;
 // }
 button{
-    background-color: white;
-    width: 25%;
+    background-color: rgb(246, 246, 246);
+    width: 30%;
     color: #000;
-    margin-left: 150px;
+    margin-left: 180px;
+    height:50px; 
+    border-radius: 20px;
 }
