--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,5 +1,7 @@
 .carousel{
-    height: 500px;
-    width: 180px;
+margin-left:150px;
+margin-top:60px;
 
+// margin-right: 10px;
+// margin-bottom: 10px;
 }
