--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -24,6 +24,8 @@ h2{
     border: 2px solid black;
     width:50% ;
     background-color: rgb(14, 74, 111); 
+
+    // https://www.powershow.com/view0/917f9b-NDVjY/Vidyalaya-School_Management_Software_1_powerpoint_ppt_presentation
 }
 button{
     margin: 10px 0px;
