--- a/src/app/reference/reference.component.html
+++ b/src/app/reference/reference.component.html
@@ -1,57 +1,43 @@
-<div class="cards">
-  <div class="row">
-    <div class=" col">
-      <div class="card1" >
-        <a href="https://static.careers360.mobi/media/uploads/froala_editor/files/CBSE-Class-12-English-Syllabus.pdf">
-          <img src="assets/english.jpeg">
-          <!-- <div class=" text-black  p-12">Tamil</div> -->
-        </a>
-      </div>
-  
-    <br>
 
-    <div class="card" style="max-width: 40rem">
-      <a href="https://static.careers360.mobi/media/uploads/froala_editor/files/CBSE-Class-12-English-Syllabus.pdf">
-        <img src="assets/tamil-culture.jpg">
-        <!-- <div class=" text-black  p-12">Tamil</div> -->
-      </a>
-    </div>
-  </div>
-</div>
-
-    
-  </div>
-
-    <!-- <div class="notes" >
-        <a href="">
-        <img src="assets/english.jpeg">
-        <div class="card-body text-black  p-12">English</div>
-        </a>
-      </div>
-    </div>
-
-    <div class="notes" >
-      <a href="">
-        <img src="assets/maths.jpeg">
-        <div class="card-body text-black  p-12">Maths/div>
+     <div class="container">
+      <div class="row">
+        <div class=" col">
+          <div class="card" style="max-width: 15rem;">
+            <a href="https://static.careers360.mobi/media/uploads/froala_editor/files/CBSE-Class-12-English-Syllabus.pdf">
+            <img class="card-img-top" src="assets/english.jpeg" alt="Card image cap">
+                      </a>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="max-width: 15rem;">
+            <a href="https://rozgarpatrika.com/wp-content/uploads/2020/05/10-tamil-cbse-x-question-paper-2019-20.pdf">
+            <img class="card-img-top" src="assets/tamil.png" alt="Card image cap">
+            </a>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="max-width: 15rem;">
+            <a href="https://cbseacademic.nic.in/web_material/SQP/ClassX_2021_22/MathsStandard-SQP.pdf">
+            <img class="card-img-top" src="assets/maths.jpeg" alt="Card image cap">
+            </a>
+          </div>
+        </div>
+          </div>
+        </div>
+ 
+      <div class="row">
+        <div class="col">
+          <div class="card" style="max-width: 15rem;">
+            <a href="https://www.kopykitab.com/blog/wp-content/uploads/2021/07/science-2020-question-paper.pdf">
+            <img class="card-img-top" src="assets/science.png" alt="Card image cap">
+          </a>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="max-width: 15rem;">
+            <a href="https://cbseacademic.nic.in/web_material/SQP/ClassX_2021_22/SocialScience-SQP_Term2.pdf">
+            <img class="card-img-top" src="assets/social.png" alt="Card image cap">
+          </a></div>
         
       </div>
-
-    <div class="notes" >
-      <a href="">
-        <img src="assets/science.png">
-        <div class="card-body text-black  p-12">Science</div>
-        </a>
-      </div>
-
-
-      <div class="notes" >
-       <a href="">
-        <img src="assets/social.png">
-        <div class="card-body text-black  p-12">Social Science</div>
-        </a>
-      </div>
- -->
-    
-
-
+    </div>
