--- a/src/app/reference/reference.component.scss
+++ b/src/app/reference/reference.component.scss
@@ -1,22 +1,87 @@
 
-
-// .notes1{
-//    height:50px;
+// .logo{
+//     width:10%;
+//     height:5%;
 // }
+// .img-wrapper {  
+//     width: 600px;
+//     // width: 100%;
+//     // height: auto;
+//     // height: 500px;
+//     // overflow: hidden; 
+//     display: inline-block;
+//     box-sizing: border-box;
+//     position: relative;
+//     // border: 1px solid #000;
+//     // object-fit:scale-down;
+//     margin: 1rem auto;
+//     // position: relative; \
+//     // border-radius: 150%;
+//   }
+  
+  .card-img-top {
+    transition: 0.3s;
+    width: 300px;
+    height: 300px;
+    border-radius: 10px;
+  }
+  
+  .card-img-top:hover {
+    transform: scale(1.1);
+  }
+//   .text-over-img { 
+// 	z-index:1; 
+// 	font-size: 1.2em; 
+// 	margin-top: -90px; 
+//   color:white;
+// } 
 
-.cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-    grid-gap: 20px;
-}
-
-// .card {
-//     display: grid;
-//     grid-template-rows: max-content 200px 1fr;
+// .carousel-caption{
+//     color: white;
+//     font-size: larger;
 // }
-
+// .text-block {
+//     position: absolute;
+//     bottom:10px;
+//     left:70px;
+//     // right: 10px;
+//     // background-color: white;
+//     font-size:large;
+//     font-weight: 400;
+//     // color: white;
+//     color: black;
+//     // padding-left: 20px;
+//     // padding-right: 20px;
+//     position: absolute;
+//   }
+  
+// .card-body {
+//     z-index: 2;
+//     position: absolute;
+//     right: 0;
+//     // bottom: 0;
+//     left: 100px;
+//   } 
+//   ********************************
 .card {
-    object-fit: cover;
-    width: 40%;
-    height: 20px;
-}
+    margin: 3rem auto;
+    // position: relative; 
+  }
+  
+//   .card-body {
+//     z-index: 2;
+//     position: absolute;
+//     // right: 0;
+//     // bottom: 0;
+//     // left: 100px;
+//     font-weight: 400;
+//     font-size:x-large;
+//     text-align: center;
+
+//     // position:absolute;
+//     width:110%;
+//     // width: auto;
+//     bottom:0;
+  
+//     // text-align:center;
+//   }
