--- a/src/app/student-details/student-details.component.html
+++ b/src/app/student-details/student-details.component.html
@@ -2,14 +2,14 @@
 <h1>Student Register Details</h1>
 
 <div class="card-product">
-    <table class="table table-striped">
+    <table class="table ">
   
         <thead>
-            <th>Student Name</th>
-            <th>Register Number</th>
-            <th>Gender</th>
-            <th>Email</th>
-            <th>Phone Number</th>
+            <th>NAME</th>
+            <th>REGISTER NUMBER</th>
+            <th>GENDER</th>
+            <th>EMAIL</th>
+            <th>MOBILE NUMBER</th>
         </thead>
 
         <tbody>
