--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!-- <app-sidenavbar></app-sidenavbar> -->
 
+<!-- <router-outlet></router-outlet> -->
 <router-outlet></router-outlet>
+<!-- <app-sidenavbar></app-sidenavbar> -->
