--- a/src/app/frontpage/frontpage.component.scss
+++ b/src/app/frontpage/frontpage.component.scss
@@ -1,17 +1,23 @@
 button{
-    width: 130px;
-    height: 40px;
-    border: 2px solid black;
+    width: 150px;
+    height: 50px;
+    border: 2px solid rgb(86, 17, 17);
     border-radius: 30px;
+    // rgb(40, 27, 128);
+    // color:white;
+    background-color: rgb(11, 81, 125); 
+    
 }
+
 .second{
     background-image:url('../../assets/front.png');
     // height: 700px;
-    width: 750px;
+    width: 745px;
 //    background-position: center ;
 //    background-size: cover;
     // margin: 0px;
    min-height: 95%;
+
    margin-top: 0px;
 //    width: 100%;
 }
@@ -21,22 +27,29 @@ button{
 // }
 
 .Login,.Register{
-    width: 120px;
-    height: 50px;
+    // width: 120px;
+    // height: 50px;
     // margin-left: 500px;
-    color: #000;
+    color:white;
+
 }
 .Register{
-    margin-top: 300px;
+    margin-top: 50px;
     margin-left: 1000px;
-
+    
 }
 .Login{
-    margin-top: 100px;
+    margin-top: 250px;
     margin-left: 1000px;
-
 }
 
 // .second{
 //     // background-color: yellow;
 // }
+
+h1{
+    font-style:oblique;
+    font-size: 50px;
+    margin-top: 30px;
+    margin-left: 100px;
+}
