--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -44,7 +44,10 @@
     <label>password</label>
     <input type="password" #password="ngModel" pattern="^.*(?=.{8,})(?=..*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=]).*$" class="form-control" required
     [class.is-invalid]="password.invalid && password.touched"  name="password" [(ngModel)]="userModel.password" >
-    <small class="text-danger" [class.d-none]="password.valid || password.untouched">password is required</small>
+    <div *ngIf="password.errors && (password.invalid || password.touched)">
+    <small class="text-danger" [class.d-none]="password.valid || password.untouched" *ngIf="password.errors['pattern']">password should contain atleast 8 digits, 1 caps,1 Number,1 special character.</small>
+    <small class="text-danger" [class.d-none]="password.valid || password.untouched" *ngIf="password.errors['required']">password is required</small>
+  </div>
   </div>
 
   <label>Confirm Password</label>
