--- a/src/app/update-holiday/update-holiday.component.html
+++ b/src/app/update-holiday/update-holiday.component.html
@@ -1,24 +1,24 @@
-<!-- <app-sidenavbar></app-sidenavbar> -->
-
 <div class="container">
-    <h1>Add</h1>
-    <form #userForm="ngForm">
- 
-    
-      <div class="form-group">
-        <label>Date</label>
-        <input type="date" #date="ngModel" class="form-control" [class.is-invalid]="date.invalid && date.touched" name="date" [(ngModel)]="userList.date" required> 
-        <small class="text-danger" [class.d-none]="date.valid || date.untouched">date is required</small>
-      </div>
-    
-  
-      <div class="form-group">
-        <label>Description</label>
-        <input type="text" #descrip="ngModel" class="form-control" required [class.is-invalid]="descrip.invalid && descrip.touched"  name="descrip" [(ngModel)]="userList.descrip" >
-        <!-- <small class="text-danger" [class.d-none]="email.valid || email.untouched">Email is invalid</small> -->
-      </div><br>
-      
-      <button (click)="backButton()" type="submit" class="btn btn-primary">Back</button>
-      <button [disabled]="userForm.form.invalid" id="submit" (click)="tableDisplay(userForm)" type="submit"  class="btn btn-primary" >Submit</button>
-   </form>
-  </div>
+  <h1>Add</h1>
+  <form #userForm="ngForm">
+
+    <div class="form-group">
+      <label>Date</label>
+      <input type="date" #date="ngModel" class="form-control" [class.is-invalid]="date.invalid && date.touched"
+        name="date" [(ngModel)]="userList.date" required>
+      <small class="text-danger" [class.d-none]="date.valid || date.untouched">date is required</small>
+    </div>
+
+
+    <div class="form-group">
+      <label>Description</label>
+      <input type="text" #descrip="ngModel" class="form-control" required
+        [class.is-invalid]="descrip.invalid && descrip.touched" name="descrip" [(ngModel)]="userList.descrip">
+      <!-- <small class="text-danger" [class.d-none]="email.valid || email.untouched">Email is invalid</small> -->
+    </div><br>
+
+    <button (click)="backButton()" type="submit" class="btn btn-primary">Back</button>
+    <button [disabled]="userForm.form.invalid" id="submit" (click)="tableDisplay(userForm)" type="submit"
+      class="btn btn-primary">Submit</button>
+  </form>
+</div>
