--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -3,18 +3,20 @@
     margin-top: 100px;
     background-color: #293b64;
     width:40%;
+    background-image:url('../../assets/background.png');
+    background-position: center;
+    background-size: cover;
 }
-div{
 
+div{
     margin-top:20px;
     // margin-left:50px;
 }
 input,select{
     padding: 10px;
-    width: 90%;
+    width: 100%;
     height:50px;  
     background-color: rgb(255, 255, 255);
-    
 }
 label{
     padding: 10px;
@@ -34,3 +36,4 @@ button{
     height:50px; 
     border-radius: 20px;
 }
+
