--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,7 +1,11 @@
 .carousel{
-margin-left:150px;
-margin-top:60px;
-
+margin-top:20px;
+width:150%;
+height:300px;
 // margin-right: 10px;
 // margin-bottom: 10px;
+}
+img{
+    width:1000px;
+height:700px;
 }
