--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -10,7 +10,6 @@
   
    <!-- <mat-drawer mode="side" opened="true">
     <app-sidenavbar></app-sidenavbar> -->
-
    <mat-drawer-container>
      <mat-drawer mode="side" opened="true">
       <mat-nav-list>
@@ -37,6 +36,10 @@
         </mat-nav-list>   
     </mat-drawer>
     <mat-drawer-content>
+      <div class="scrolling"></div>
+     
+        <!-- <div id="scroll-text">This is scrolling text.<div> -->
+      <app-dashboard></app-dashboard>
 
     </mat-drawer-content>
   
