--- a/src/app/reference/reference.component.html
+++ b/src/app/reference/reference.component.html
@@ -1,5 +1,6 @@
 
      <div class="container">
+      <h1>REFERENCE</h1>
       <div class="row">
         <div class=" col">
           <div class="card" style="max-width: 15rem;">
@@ -41,3 +42,4 @@
         
       </div>
     </div>
+    <button class="back btn btn-secondary" (click)="back()">Back</button>
