--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,15 @@
-<app-page></app-page> 
+
 <!-- <app-sidenavbar></app-sidenavbar> -->
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/dashboard1.jpg" class="w-75 h-50" alt="...">
+        <img src="assets/pic2.jpg" class="w-75" d-block w-100 h-75 alt="...">
       </div>
       <div class="carousel-item">
-        <img src="assets/school.jpg" class="w-75 h-115" d-block w-100 h-75 alt="...">
+        <img src="assets/pic1.jpg" class="w-75 " d-block w-100 h-75 alt="...">
       </div>
       <div class="carousel-item">
-        <img src="assets/student.jpg" class="w-80" d-block w-100 h-75 alt="...">
+        <img src="assets/student.jpg" class="w-75" d-block w-75 h-75 alt="...">
       </div>
     </div>
 
